--- a/lang/lang.csv
+++ b/lang/lang.csv
@@ -16,7 +16,11 @@ admin;own_library_only;"Nur eigene Bibliothek anzeigen";"Show own Library only"
 admin;permission;"Admin-Rollen";"Admin-Roles"
 admin;permission_manager;"Manager-Rollen";"Manager-Roles"
 admin;placeholders;"Platzhalter";"Placeholders"
+admin;regex;"Regulärer Ausdruck";"Regular Expression"
+admin;regex_info;"Mit Anfangs- und Schlusszeichen (bspw. /([0-9]{5}-[0-9]{2})/uim)";"With Delimiter (e.g. /([0-9]{5}-[0-9]{2})/uim)"
 admin;use_libraries;"Mehrere Bibliotheken verwenden";"Use mutliple Libraries"
+admin;use_regex;"Regulären Audruck für DigiLit-ID verwenden";"User Regular Expression für DigiLit-ID"
+admin;use_regex_info;"Regex-Suche nach String in Kurs-Titel, der erste Treffer wird verwendet.";"Regex-Search in Course-Title, the first match will be used"
 common;actions;"Aktionen";"Actions"
 common;bool_0;"Nein";"No"
 common;bool_1;"Ja";"Yes"
@@ -57,6 +61,8 @@ library;update;"Speichern";"Save"
 library;view;"Details";"Details"
 main_menu;button;"DigiLit-Admin";"DigiLit-Admin"
 msg;confirm_delete_library;"Möchten Sie die folgende Bibliothek wirklich löschen?";"Do you really want to delete the following library?"
+msg;request_delete_file;"Möchten Sie das PDF zum angezeigten Eintrag löschen?";"Do you want to delete the current PDF?"
+msg;request_file_deleted;"Datei wurde gelöscht";"File has been deleted"
 msg;success_add;"Erfolgreich gespeichert";"Saved"
 msg;success_edit;"Erfolgreich gespeichert";"Saved"
 msg;success_upload;"Datei hochgeladen";"File uploaded"
@@ -70,6 +76,7 @@ obj;xdgl_edit;"Antragsdaten bearbeiten";"Edit request data"
 obj;xdgl_title;"DigiLit beantragen";"Request DigiLit"
 obj;xdgls;"DigiLits";"DigiLits"
 objs;xdgl;"DigiLits";""
+replace;title;"Dokument ersetzen";"Replace File"
 request;assign;"Bibliothek zuordnen";"Assign Library"
 request;assigned_librarian;"Zugewiesene/r Bearbeiter/in";"Assigned Librarian"
 request;assigned_library;"Zugewiesene Bibliothek";"Assigned Library"
@@ -86,9 +93,12 @@ request;course_name;"Kurs-Nummer/Kurs-Titel";"Course-Number/Course-Title"
 request;create;"Antrag stellen";"Send Request"
 request;create_date;"Bestelldatum";"Order date"
 request;creation_date;"Anfragedatum";"Request Date"
+request;date_last_status_change;"Letzte Änderung";"Last change"
+request;delete_file;"PDF löschen";"Delete PDF"
 request;edit;"Metadaten bearbeiten";"Edit Metadata"
 request;edition_relevant;"Nur diese Auflage";"This edition only"
 request;editor;"Autor/Herausgeber";"Editor"
+request;ext_id;"ID";"ID"
 request;internal_notice;"Interne Bemerkungen";"Internal Notice"
 request;issn;"ISSN/ISBN";"ISSN/ISBN"
 request;last_status_change;"Letzte Bearbeitung";"Last update"
@@ -103,6 +113,7 @@ request;publishing_year;"Jahr";"Year"
 request;refuse;"Ablehnen";"Refuse"
 request;refuse_reason;"Grund";"Reason"
 request;refusing_date;"Abgelehnt am";"Refused"
+request;replace_file;"PDF ersetzen";"Replace PDF"
 request;requester_fullname;"Antragsteller";"Requester"
 request;requester_mailto;"E-Mail";"E-Mail"
 request;status;"Status";"Status"
@@ -124,6 +135,7 @@ tab;requests;"Bestellungen verwalten";"Manage Requests"
 tab;settings;"Einstellungen";"Settings"
 upload;cancel;"Abbrechen";"Cancel"
 upload;file;"Datei";"File"
+upload;replace;"Ersetzen";"Replace"
 upload;save;"Hochladen";"Upload"
 upload;title;"PDF hochladen";"Upload PDF"
 validation_failure;4_digits_required;"Format YYYY";"Format YYYY"
