--- a/lang/lang.csv
+++ b/lang/lang.csv
@@ -8,7 +8,7 @@ admin_form;title;"Einstellungen";"Settings"
 admin;mail;"E-Mail";"E-Mail"
 admin;mail_moved;"Mailtext beim Verschieben in Bibliothek";"Mailbody on move to Library"
 admin;mail_new_request;"Mailtext bei neuem Antrag";"Mailbody for New Request"
-admin;mail_rejected;"Mailtext abgelehnter Antrage";"Mailbody for rejected Requests"
+admin;mail_rejected;"Mailtext abgelehnter Antrag";"Mailbody for rejected Requests"
 admin;mail_textes;"Mail-Texte";"Mail texts"
 admin;mail_uploaded;"Mailtext bei hochgeladener Datei";"Mailbody for Uploaded Files"
 admin;max_digilits;"Maximale Anzahl DigiLits im Kurs";"Max amount of DigiLits in a course"
@@ -34,8 +34,10 @@ filter;status;"Status";"Status"
 fold;create_xdgl;"DigiLits erstellen";""
 form;usr_placeholder;"Benutzer suchen";"Search Users"
 grp;create_xdgl;"DigiLits erstellen";""
+librarian;already_assigned;"Bereits einer Bibliothek zugewiesen";"Already assigned to a library"
 librarian;back;"Zurück";"Back"
-librarian;form_title;"Bearbeiter/innen/Librarians";""
+librarian;form_title;"Bearbeiter/in";"Librarian"
+librarian;has_sets;"Hat zugeordnete Anträge";"Has assigned requests"
 librarian;none;"Keine";"none"
 librarian;return;"Zurück zur Übersicht";"Back to Overview"
 librarian;select;"Bearbeiter/in auswählen";"Select Librarian"
@@ -95,6 +97,7 @@ request;create_date;"Bestelldatum";"Order date"
 request;creation_date;"Anfragedatum";"Request Date"
 request;date_last_status_change;"Letzte Änderung";"Last change"
 request;delete_file;"PDF löschen";"Delete PDF"
+request;download_file;"PDF herunterladen";"Download PDF"
 request;edit;"Metadaten bearbeiten";"Edit Metadata"
 request;edition_relevant;"Nur diese Auflage";"This edition only"
 request;editor;"Autor/Herausgeber";"Editor"
