--- a/lang/lang.csv
+++ b/lang/lang.csv
@@ -71,6 +71,7 @@ msg;success_upload;"Datei hochgeladen";"File uploaded"
 notification_subject;mail_new_request;"Neuer DigiLit-Antrag";"New DigiLit-Request"
 notification_subject;mail_rejected;"DigiLit-Antrag abgelehnt";"DigiLit-Request rejected"
 notification_subject;mail_uploaded;"DigiLit hochgeladen";"DigiLit uploaded"
+notification_subject;mail_moved;"DigiLit verschoben";"DigiLit moved"
 obj;list_page;"Seite(n)";"Page(s)"
 obj;xdgl;"DigiLit";"DigiLit"
 obj;xdgl_admin_title;"DigiLit Administration";"DigiLit Administration"
