--- a/lang/lang.csv
+++ b/lang/lang.csv
@@ -59,6 +59,7 @@ library;perform_assignment;"Bibliothek zuordnen";"Assign Library"
 library;request_count;"Anzahl zugewiesener Requests";"Amount of Requests"
 library;select;"Bibliothek auswählen";"Select Library"
 library;title;"Name";"Name"
+library;active;"Aktiv";"Active"
 library;update;"Speichern";"Save"
 library;view;"Details";"Details"
 main_menu;button;"DigiLit-Admin";"DigiLit-Admin"
