small language adjustments

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -72,7 +72,7 @@ msg_success_upload#:#Datei hochgeladen
 notification_subject_mail_new_request#:#Neuer DigiLit-Antrag
 notification_subject_mail_rejected#:#DigiLit-Antrag abgelehnt
 notification_subject_mail_uploaded#:#DigiLit hochgeladen
-notification_subject_mail_moved#:#DigiLit verschoben
+notification_subject_mail_moved#:#DigiLit neu zugewiesen
 obj_list_page#:#Seite(n)
 obj_xdgl#:#DigiLit
 obj_xdgl_admin_title#:#DigiLit Administration
@@ -120,7 +120,7 @@ request_refuse_reason#:#Grund
 request_refusing_date#:#Abgelehnt am
 request_replace_file#:#PDF ersetzen
 request_requester_fullname#:#Antragsteller
-request_requester_mailto#:#E-Mail
+request_requester_mailto#:#Besteller/in
 request_status#:#Status
 request_status_-1#:#Gelöscht
 request_status_1#:#Neu
