--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -21,7 +21,7 @@ admin_regex_info#:#Mit Anfangs- und Schlusszeichen (bspw. /([0-9]{5}-[0-9]{2})/u
 admin_use_libraries#:#Mehrere Bibliotheken verwenden
 admin_use_regex#:#Regulären Audruck für DigiLit-ID verwenden
 admin_use_regex_info#:#Regex-Suche nach String in Kurs-Titel, der erste Treffer wird verwendet.
-admin_use_search#:#Literatursuche verwenden.
+admin_use_search#:#Literatursuche verwenden
 admin_use_search_info#:#Über die Literatursuche kann nach bereits digital verfügbarem Inhalt gesucht werden, bevor ggf. ein Antrag für eine digitale Version eines Printmediums gemacht wird.
 author#:#Autor
 common_actions#:#Aktionen
