removed status copy usages, added language variables, added interface directory to composer json, gui and model class edits

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -131,6 +131,7 @@ request_status_2#:#In Bearbeitung
 request_status_3#:#Dokument vorhanden
 request_status_4#:#Antrag abgelehnt
 request_status_5#:#Kopiert
+request_status_6#:#Zugewiesen
 request_title#:#Artikeltitel
 request_update#:#Speichern
 request_upload_date#:#Hochgeladen
