--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -159,3 +159,4 @@ xdgl_new#:#Request new DigiLit
 number_of_usages#:#Number of usages
 msg_request_delete#:#Do you really want to delete the shown entry?
 msg_request_delete_with_usages#:#Do you really want to delete the shown entry? The entry is used in the following courses:
+permission_denied#:#You don't have the necessary permissions.
