fixed bugs, added new translations

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -158,5 +158,7 @@ xdgl_write#:#Edit
 xdgl_new#:#Request new DigiLit
 number_of_usages#:#Number of usages
 msg_request_delete#:#Do you really want to delete the shown entry?
-msg_request_delete_with_usages#:#Do you really want to delete the shown entry? The entry is used in the following courses:
+msg_request_delete_with_usages#:#The entry can not be deleted, because the entry is used in the following courses:
 permission_denied#:#You don't have the necessary permissions.
+delete_request#:#Delete request
+msg_request_deleted#:#The request was deleted.
