--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -161,5 +161,7 @@ xdgl_write#:#Bearbeiten
 xdgl_new#:#Neues DigiLit beantragen
 number_of_usages#:#Anzahl Verwendungen
 msg_request_delete#:#Möchten Sie den angezeigten Eintrag wirklich löschen?
-msg_request_delete_with_usages#:#Möchten Sie den angezeigten Eintrag wirklich löschen? Der Eintrag wird in den folgenden Kursen verwendet:
+msg_request_delete_with_usages#:#Der Eintrag kann nicht gelöscht werden, da dieser in den folgenden Kursen verwendet wird:
 permission_denied#:#Sie verügen nicht über die benötigten Rechte.
+delete_request#:#Anfrage löschen
+msg_request_deleted#:#Die Anfrage wurde gelöscht.
