--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -169,6 +169,8 @@ course_needed#:#DigiLit-Objekte können nur in Kursen angelegt werden.
 conf_out_of_date#:#Die Konfiguration ist veraltet
 no_library_assigned#:#Sie können DigiLit nicht verwenden, da Sie keiner Bibliothek zugewiesen sind
 no_results_for_filter#:#Keine Ergebnisse für diesen Filter
+admin_check_role#:#Überprüfen Sie mindestens eine Rolle.
+admin_invalid_regexp#:#Regulärer Ausdruck ist nicht gültig
 rbac_create_xdgl#:#DigiLit anlegen
 obj_xdgl_duplicate#:#DigiLit kopieren
 objs_xdgl_duplicate#:#DigiLits kopieren
